# fastapi-course

./: alembic.ini  pyproject.toml
app/: config.py  database.py  main.py
app/handlers/: auth.py  dependencies.py  hotels.py  rooms.py
app/migrations/: env.py
app/migrations/versions/: 1754064591_2cd881018de3_create_hotels_table.py  1754065000_6ba1033b5947_create_rooms_table.py  1755530662_d0e959f5843c_create_users_table.py  1755537766_52810959ed1e_update_users_table_to_make_email_unique.py  42e758f70f35_initial_migration.py  788c65b16a43_create_rooms_table.py
app/models/: hotels.py  rooms.py  users.py
app/repositories/: base.py  hotels.py  rooms.py
app/schemas/: hotels.py  rooms.py  users.py
app/services/: auth.py
