[project]
name = "fast"
version = "0.1.0"
description = ""
authors = [
    {name = "Artyom Komarenko",email = "artyom.komarenko@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"

[tool.ruff]
line-length=120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A002",
    "D",
    "PLW0603", "PLW0602", # временно
    "RUF001",
]

[tool.ruff.lint.per-file-ignores]
"config.py" = ["N802"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

